traefik-dev/simple-ingress-routes/3-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.example.com`)
      kind: Rule
      services:
        - name: nginx-deploy-main
          port: 80
    - match: Host(`blue.nginx.example.com`)
      kind: Rule
      services:
        - name: nginx-deploy-blue
          port: 80
    - match: Host(`red.nginx.example.com`)
      kind: Rule
      services:
        - name: nginx-deploy-red
          port: 80
